--- a/work5.html
+++ b/work5.html
@@ -13,21 +13,20 @@
 <p id="kq"></p>
 <script>9
     function xepHang () {
-        let a = document.getElementById('a').value;
-        let b = document.getElementById('b').value;
-        let c = document.getElementById('c').value;
+        let a = +document.getElementById('a').value;
+        let b = +document.getElementById('b').value;
+        let c = +document.getElementById('c').value;
         let dtb = (a+b+c)/3 ;
         if ( dtb >=0 && dtb<5) {
-            document.getElementById('kq').innerHTML = 'Điẻm trung bình là:' + dtb + ' Xếp hạng : Yếu';
+            document.getElementById('kq').innerHTML = 'Điểm trung bình là: ' + dtb + ' , Xếp hạng : Yếu';
         } else if (dtb >=5 && dtb<8) {
-            document.getElementById('kq').innerHTML = 'Điẻm trung bình là:' + dtb + ' Xếp hạng : Khá';
+            document.getElementById('kq').innerHTML = 'Điểm trung bình là: ' + dtb + ' , Xếp hạng : Khá';
         } else if (dtb>=8 && dtb<10) {
-            document.getElementById('kq').innerHTML = 'Điẻm trung bình là:' + dtb + ' Xếp hạng : Giỏi';
+            document.getElementById('kq').innerHTML = 'Điẻm trung bình là: ' + dtb + ' , Xếp hạng : Giỏi';
         } else {
             document.getElementById('kq').innerHTML = ' Không hợp lệ';
         }
     }
-
 </script>
 </body>
 </html>
