--- a/work2.html
+++ b/work2.html
@@ -12,7 +12,7 @@
 <p style="color: crimson" id="kq"></p>
 <script>
   function kiemTra () {
-    let a = document.getElementById('a').value;
+    let a = +document.getElementById('a').value;
     if (a < 15) {
       document.getElementById('kq').innerHTML = ' Không đủ tuổi học lớp 10 '
     } else {
