--- a/work1.html
+++ b/work1.html
@@ -13,8 +13,8 @@
 <p id="kq"></p>
 <script>
     function kiemTra () {
-        let a = document.getElementById('a').value;
-        let b = document.getElementById('b').value;
+        let a = +document.getElementById('a').value;
+        let b = +document.getElementById('b').value;
         if(a % b == 0) {
             document.getElementById('kq').innerHTML = 'a chia hết cho b';
         } else {
