--- a/work3.html
+++ b/work3.html
@@ -12,7 +12,7 @@
 <p style="color: blue" id="kq"></p>
 <script>
     function kiemTra () {
-        let a = document.getElementById('a').value;
+        let a = +document.getElementById('a').value;
         if ( a > 0 ) {
             document.getElementById('kq').innerHTML = ' Là số nguyên lớn hơn 0';
         } else {
