--- a/work4.html
+++ b/work4.html
@@ -14,9 +14,9 @@
 <p style="color: green" id="kq"></p>
 <script>
     function findMax() {
-        let a = document.getElementById('a').value;
-        let b = document.getElementById('b').value;
-        let c = document.getElementById('c').value;
+        let a = +document.getElementById('a').value;
+        let b = +document.getElementById('b').value;
+        let c = +document.getElementById('c').value;
         let maxvalue;
         if (a>b && a>c) {
             maxvalue = a ;
